xotl/fl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_CLASS
    KEYWORD_INSTANCE

Grammar

Rule 0     S' -> program
Rule 1     expr_factor -> expr_factor SPACE expr_factor
Rule 2     expr_factor -> ATTR_ACCESS
Rule 3     expr_term9 -> expr_factor infixr_operator_9 expr_term9
Rule 4     expr_term9 -> expr_factor
Rule 5     expr_term7 -> expr_term7 infixl_operator_7 expr_term9
Rule 6     expr_term7 -> expr_term9
Rule 7     expr_term6 -> expr_term6 infixl_operator_6 expr_term7
Rule 8     expr_term6 -> expr_term7
Rule 9     expr_term2 -> expr_term2 infixl_operator_2 expr_term6
Rule 10    expr_term2 -> expr_term6
Rule 11    expr_term1 -> expr_term2 infixr_operator_2 expr_term1
Rule 12    expr_term1 -> expr_term2
Rule 13    expr_term0 -> expr infixl_operator_0 expr_term0
Rule 14    expr_term0 -> expr_term1
Rule 15    st_expr -> expr
Rule 16    expr -> expr_term0
Rule 17    expr_factor -> literal
Rule 18    expr_factor -> identifier
Rule 19    expr_factor -> enclosed_expr
Rule 20    expr_factor -> unit_value
Rule 21    expr_factor -> letexpr
Rule 22    expr_factor -> where_expr
Rule 23    expr_factor -> lambda_expr
Rule 24    st_type_expr -> type_expr
Rule 25    literal -> number
Rule 26    literal -> concrete_number
Rule 27    literal -> string
Rule 28    literal -> char
Rule 29    literal -> date
Rule 30    literal -> datetime
Rule 31    literal -> date_interval
Rule 32    literal -> datetime_interval
Rule 33    date -> DATE
Rule 34    datetime -> DATETIME
Rule 35    date_interval -> DATE_INTERVAL
Rule 36    datetime_interval -> DATETIME_INTERVAL
Rule 37    unit_value -> LPAREN RPAREN
Rule 38    char -> CHAR
Rule 39    string -> STRING
Rule 40    identifier -> _identifier
Rule 41    _identifier -> UNDER_IDENTIFIER
Rule 42    _identifier -> UPPER_IDENTIFIER
Rule 43    _identifier -> LOWER_IDENTIFIER
Rule 44    enclosed_expr -> LPAREN expr RPAREN
Rule 45    expr_factor -> enclosed_expr expr_factor
Rule 46    expr_factor -> expr_factor enclosed_expr
Rule 47    enclosed_expr -> LPAREN DOT_OPERATOR RPAREN
Rule 48    enclosed_expr -> LPAREN operator RPAREN
Rule 49    infixr_operator_9 -> DOT_OPERATOR
Rule 50    infixl_operator_7 -> STAR
Rule 51    infixl_operator_7 -> SLASH
Rule 52    infixl_operator_7 -> DOUBLESLASH
Rule 53    infixl_operator_7 -> PERCENT
Rule 54    infixl_operator_6 -> PLUS
Rule 55    infixl_operator_6 -> MINUS
Rule 56    infixr_operator_2 -> COLON
Rule 57    infixl_operator_2 -> OPERATOR
Rule 58    infixl_operator_2 -> ARROW
Rule 59    infixl_operator_2 -> COMMA
Rule 60    infixl_operator_0 -> TICK_OPERATOR
Rule 61    operator -> infixl_operator_0
Rule 62    operator -> infixl_operator_2
Rule 63    operator -> infixr_operator_2
Rule 64    operator -> infixl_operator_6
Rule 65    operator -> infixl_operator_7
Rule 66    number -> BASE10_INTEGER
Rule 67    number -> BASE16_INTEGER
Rule 68    number -> BASE8_INTEGER
Rule 69    number -> BASE2_INTEGER
Rule 70    number -> FLOAT
Rule 71    concrete_number -> number ANNOTATION string
Rule 72    concrete_number -> number ANNOTATION char
Rule 73    concrete_number -> number ANNOTATION identifier
Rule 74    empty -> <empty>
Rule 75    lambda_expr -> BACKSLASH parameters ARROW expr
Rule 76    parameters -> _identifier _parameters
Rule 77    _parameters -> SPACE _identifier _parameters
Rule 78    _parameters -> empty
Rule 79    pattern -> parameters
Rule 80    equation -> pattern EQ expr
Rule 81    equations -> equation _equation_set
Rule 82    _equation_set -> PADDING equation _equation_set
Rule 83    _equation_set -> empty
Rule 84    letexpr -> KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
Rule 85    where_expr -> expr KEYWORD_WHERE SPACE equations
Rule 86    where_expr -> expr KEYWORD_WHERE PADDING equations
Rule 87    type_expr -> type_function_expr
Rule 88    type_expr -> type_term
Rule 89    type_function_expr -> type_term ARROW _maybe_padding type_function_expr
Rule 90    type_function_expr -> type_term
Rule 91    type_term -> type_app_expression
Rule 92    type_term -> type_factor
Rule 93    type_app_expression -> type_factor _app_args_non_empty
Rule 94    _app_args -> SPACE type_factor _app_args
Rule 95    _app_args_non_empty -> SPACE type_factor _app_args
Rule 96    _app_args -> empty
Rule 97    type_variable -> LOWER_IDENTIFIER
Rule 98    type_cons -> UPPER_IDENTIFIER
Rule 99    type_factor -> type_variable
Rule 100   type_factor -> type_cons
Rule 101   type_factor -> LPAREN _maybe_padding type_expr _maybe_padding RPAREN
Rule 102   type_factor -> LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
Rule 103   _maybe_padding -> PADDING
Rule 104   _maybe_padding -> empty
Rule 105   program -> definitions
Rule 106   definitions -> definition _definition_set
Rule 107   _definition_set -> NEWLINE definition _definition_set
Rule 108   _definition_set -> empty
Rule 109   definition -> nametype_decl
Rule 110   definition -> valuedef
Rule 111   definition -> datatype_definition
Rule 112   valuedef -> equation
Rule 113   nametype_decl -> _identifier COLON COLON st_type_expr
Rule 114   datatype_definition -> _datatype_lhs EQ _data_rhs
Rule 115   _datatype_lhs -> KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
Rule 116   _cons_params -> SPACE LOWER_IDENTIFIER _cons_params
Rule 117   _cons_params -> empty
Rule 118   _data_rhs -> data_cons _data_conses
Rule 119   _data_conses -> _maybe_padding PIPE data_cons _data_conses
Rule 120   _data_conses -> empty
Rule 121   data_cons -> _data_cons
Rule 122   _data_cons -> UPPER_IDENTIFIER _cons_args
Rule 123   _cons_args -> SPACE cons_arg _cons_args
Rule 124   _cons_args -> empty
Rule 125   cons_arg -> type_variable
Rule 126   cons_arg -> type_cons
Rule 127   cons_arg -> _cons_arg_factor
Rule 128   _cons_arg_factor -> LPAREN type_expr RPAREN
Rule 129   _cons_arg_factor -> LBRACKET type_expr RBRACKET

Terminals, with rules where they appear

ANNOTATION           : 71 72 73
ARROW                : 58 75 89
ATTR_ACCESS          : 2
BACKSLASH            : 75
BASE10_INTEGER       : 66
BASE16_INTEGER       : 67
BASE2_INTEGER        : 69
BASE8_INTEGER        : 68
CHAR                 : 38
COLON                : 56 113 113
COMMA                : 59
DATE                 : 33
DATETIME             : 34
DATETIME_INTERVAL    : 36
DATE_INTERVAL        : 35
DOT_OPERATOR         : 47 49
DOUBLESLASH          : 52
EQ                   : 80 114
FLOAT                : 70
KEYWORD_CLASS        : 
KEYWORD_DATA         : 115
KEYWORD_IN           : 84
KEYWORD_INSTANCE     : 
KEYWORD_LET          : 84
KEYWORD_WHERE        : 85 86
LBRACKET             : 102 129
LOWER_IDENTIFIER     : 43 97 116
LPAREN               : 37 44 47 48 101 128
MINUS                : 55
NEWLINE              : 107
OPERATOR             : 57
PADDING              : 82 86 103
PERCENT              : 53
PIPE                 : 119
PLUS                 : 54
RBRACKET             : 102 129
RPAREN               : 37 44 47 48 101 128
SLASH                : 51
SPACE                : 1 77 84 84 85 94 95 115 116 123
STAR                 : 50
STRING               : 39
TICK_OPERATOR        : 60
UNDER_IDENTIFIER     : 41
UPPER_IDENTIFIER     : 42 98 115 122
error                : 

Nonterminals, with rules where they appear

_app_args            : 94 95
_app_args_non_empty  : 93
_cons_arg_factor     : 127
_cons_args           : 122 123
_cons_params         : 115 116
_data_cons           : 121
_data_conses         : 118 119
_data_rhs            : 114
_datatype_lhs        : 114
_definition_set      : 106 107
_equation_set        : 81 82
_identifier          : 40 76 77 113
_maybe_padding       : 89 101 101 102 102 119
_parameters          : 76 77
char                 : 28 72
concrete_number      : 26
cons_arg             : 123
data_cons            : 118 119
datatype_definition  : 111
date                 : 29
date_interval        : 31
datetime             : 30
datetime_interval    : 32
definition           : 106 107
definitions          : 105
empty                : 78 83 96 104 108 117 120 124
enclosed_expr        : 19 45 46
equation             : 81 82 112
equations            : 84 85 86
expr                 : 13 15 44 75 80 85 86
expr_factor          : 1 1 3 4 45 46
expr_term0           : 13 16
expr_term1           : 11 14
expr_term2           : 9 11 12
expr_term6           : 7 9 10
expr_term7           : 5 7 8
expr_term9           : 3 5 6
identifier           : 18 73
infixl_operator_0    : 13 61
infixl_operator_2    : 9 62
infixl_operator_6    : 7 64
infixl_operator_7    : 5 65
infixr_operator_2    : 11 63
infixr_operator_9    : 3
lambda_expr          : 23
letexpr              : 21
literal              : 17
nametype_decl        : 109
number               : 25 71 72 73
operator             : 48
parameters           : 75 79
pattern              : 80
program              : 0
st_expr              : 84
st_type_expr         : 113
string               : 27 71
type_app_expression  : 91
type_cons            : 100 126
type_expr            : 24 101 102 128 129
type_factor          : 92 93 94 95
type_function_expr   : 87 89
type_term            : 88 89 90
type_variable        : 99 125
unit_value           : 20
valuedef             : 110
where_expr           : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (105) program -> . definitions
    (106) definitions -> . definition _definition_set
    (109) definition -> . nametype_decl
    (110) definition -> . valuedef
    (111) definition -> . datatype_definition
    (113) nametype_decl -> . _identifier COLON COLON st_type_expr
    (112) valuedef -> . equation
    (114) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (41) _identifier -> . UNDER_IDENTIFIER
    (42) _identifier -> . UPPER_IDENTIFIER
    (43) _identifier -> . LOWER_IDENTIFIER
    (80) equation -> . pattern EQ expr
    (115) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (79) pattern -> . parameters
    (76) parameters -> . _identifier _parameters

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12
    KEYWORD_DATA    shift and go to state 14

    program                        shift and go to state 1
    definitions                    shift and go to state 2
    definition                     shift and go to state 3
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 8
    _datatype_lhs                  shift and go to state 9
    pattern                        shift and go to state 13
    parameters                     shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (105) program -> definitions .

    $end            reduce using rule 105 (program -> definitions .)


state 3

    (106) definitions -> definition . _definition_set
    (107) _definition_set -> . NEWLINE definition _definition_set
    (108) _definition_set -> . empty
    (74) empty -> .

    NEWLINE         shift and go to state 17
    $end            reduce using rule 74 (empty -> .)

    _definition_set                shift and go to state 16
    empty                          shift and go to state 18

state 4

    (109) definition -> nametype_decl .

    NEWLINE         reduce using rule 109 (definition -> nametype_decl .)
    $end            reduce using rule 109 (definition -> nametype_decl .)


state 5

    (110) definition -> valuedef .

    NEWLINE         reduce using rule 110 (definition -> valuedef .)
    $end            reduce using rule 110 (definition -> valuedef .)


state 6

    (111) definition -> datatype_definition .

    NEWLINE         reduce using rule 111 (definition -> datatype_definition .)
    $end            reduce using rule 111 (definition -> datatype_definition .)


state 7

    (113) nametype_decl -> _identifier . COLON COLON st_type_expr
    (76) parameters -> _identifier . _parameters
    (77) _parameters -> . SPACE _identifier _parameters
    (78) _parameters -> . empty
    (74) empty -> .

    COLON           shift and go to state 19
    SPACE           shift and go to state 21
    EQ              reduce using rule 74 (empty -> .)

    _parameters                    shift and go to state 20
    empty                          shift and go to state 22

state 8

    (112) valuedef -> equation .

    NEWLINE         reduce using rule 112 (valuedef -> equation .)
    $end            reduce using rule 112 (valuedef -> equation .)


state 9

    (114) datatype_definition -> _datatype_lhs . EQ _data_rhs

    EQ              shift and go to state 23


state 10

    (41) _identifier -> UNDER_IDENTIFIER .

    COLON           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    SPACE           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    EQ              reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    ARROW           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    NEWLINE         reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    $end            reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    PADDING         reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    LPAREN          reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    STAR            reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    SLASH           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    PERCENT         reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    PLUS            reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    MINUS           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    OPERATOR        reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    COMMA           reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)
    RPAREN          reduce using rule 41 (_identifier -> UNDER_IDENTIFIER .)


state 11

    (42) _identifier -> UPPER_IDENTIFIER .

    COLON           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    SPACE           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    EQ              reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    ARROW           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    NEWLINE         reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    $end            reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    PADDING         reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    LPAREN          reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    STAR            reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    SLASH           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    PERCENT         reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    PLUS            reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    MINUS           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    OPERATOR        reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    COMMA           reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)
    RPAREN          reduce using rule 42 (_identifier -> UPPER_IDENTIFIER .)


state 12

    (43) _identifier -> LOWER_IDENTIFIER .

    COLON           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    SPACE           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    EQ              reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    ARROW           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_WHERE   reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    TICK_OPERATOR   reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    NEWLINE         reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    $end            reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    PADDING         reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    KEYWORD_IN      reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    DOT_OPERATOR    reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    LPAREN          reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    STAR            reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    SLASH           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    DOUBLESLASH     reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    PERCENT         reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    PLUS            reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    MINUS           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    OPERATOR        reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    COMMA           reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)
    RPAREN          reduce using rule 43 (_identifier -> LOWER_IDENTIFIER .)


state 13

    (80) equation -> pattern . EQ expr

    EQ              shift and go to state 24


state 14

    (115) _datatype_lhs -> KEYWORD_DATA . SPACE UPPER_IDENTIFIER _cons_params

    SPACE           shift and go to state 25


state 15

    (79) pattern -> parameters .

    EQ              reduce using rule 79 (pattern -> parameters .)


state 16

    (106) definitions -> definition _definition_set .

    $end            reduce using rule 106 (definitions -> definition _definition_set .)


state 17

    (107) _definition_set -> NEWLINE . definition _definition_set
    (109) definition -> . nametype_decl
    (110) definition -> . valuedef
    (111) definition -> . datatype_definition
    (113) nametype_decl -> . _identifier COLON COLON st_type_expr
    (112) valuedef -> . equation
    (114) datatype_definition -> . _datatype_lhs EQ _data_rhs
    (41) _identifier -> . UNDER_IDENTIFIER
    (42) _identifier -> . UPPER_IDENTIFIER
    (43) _identifier -> . LOWER_IDENTIFIER
    (80) equation -> . pattern EQ expr
    (115) _datatype_lhs -> . KEYWORD_DATA SPACE UPPER_IDENTIFIER _cons_params
    (79) pattern -> . parameters
    (76) parameters -> . _identifier _parameters

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12
    KEYWORD_DATA    shift and go to state 14

    definition                     shift and go to state 26
    nametype_decl                  shift and go to state 4
    valuedef                       shift and go to state 5
    datatype_definition            shift and go to state 6
    _identifier                    shift and go to state 7
    equation                       shift and go to state 8
    _datatype_lhs                  shift and go to state 9
    pattern                        shift and go to state 13
    parameters                     shift and go to state 15

state 18

    (108) _definition_set -> empty .

    $end            reduce using rule 108 (_definition_set -> empty .)


state 19

    (113) nametype_decl -> _identifier COLON . COLON st_type_expr

    COLON           shift and go to state 27


state 20

    (76) parameters -> _identifier _parameters .

    EQ              reduce using rule 76 (parameters -> _identifier _parameters .)
    ARROW           reduce using rule 76 (parameters -> _identifier _parameters .)


state 21

    (77) _parameters -> SPACE . _identifier _parameters
    (41) _identifier -> . UNDER_IDENTIFIER
    (42) _identifier -> . UPPER_IDENTIFIER
    (43) _identifier -> . LOWER_IDENTIFIER

    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12

    _identifier                    shift and go to state 28

state 22

    (78) _parameters -> empty .

    EQ              reduce using rule 78 (_parameters -> empty .)
    ARROW           reduce using rule 78 (_parameters -> empty .)


state 23

    (114) datatype_definition -> _datatype_lhs EQ . _data_rhs
    (118) _data_rhs -> . data_cons _data_conses
    (121) data_cons -> . _data_cons
    (122) _data_cons -> . UPPER_IDENTIFIER _cons_args

    UPPER_IDENTIFIER shift and go to state 32

    _data_rhs                      shift and go to state 29
    data_cons                      shift and go to state 30
    _data_cons                     shift and go to state 31

state 24

    (80) equation -> pattern EQ . expr
    (16) expr -> . expr_term0
    (13) expr_term0 -> . expr infixl_operator_0 expr_term0
    (14) expr_term0 -> . expr_term1
    (11) expr_term1 -> . expr_term2 infixr_operator_2 expr_term1
    (12) expr_term1 -> . expr_term2
    (9) expr_term2 -> . expr_term2 infixl_operator_2 expr_term6
    (10) expr_term2 -> . expr_term6
    (7) expr_term6 -> . expr_term6 infixl_operator_6 expr_term7
    (8) expr_term6 -> . expr_term7
    (5) expr_term7 -> . expr_term7 infixl_operator_7 expr_term9
    (6) expr_term7 -> . expr_term9
    (3) expr_term9 -> . expr_factor infixr_operator_9 expr_term9
    (4) expr_term9 -> . expr_factor
    (1) expr_factor -> . expr_factor SPACE expr_factor
    (2) expr_factor -> . ATTR_ACCESS
    (17) expr_factor -> . literal
    (18) expr_factor -> . identifier
    (19) expr_factor -> . enclosed_expr
    (20) expr_factor -> . unit_value
    (21) expr_factor -> . letexpr
    (22) expr_factor -> . where_expr
    (23) expr_factor -> . lambda_expr
    (45) expr_factor -> . enclosed_expr expr_factor
    (46) expr_factor -> . expr_factor enclosed_expr
    (25) literal -> . number
    (26) literal -> . concrete_number
    (27) literal -> . string
    (28) literal -> . char
    (29) literal -> . date
    (30) literal -> . datetime
    (31) literal -> . date_interval
    (32) literal -> . datetime_interval
    (40) identifier -> . _identifier
    (44) enclosed_expr -> . LPAREN expr RPAREN
    (47) enclosed_expr -> . LPAREN DOT_OPERATOR RPAREN
    (48) enclosed_expr -> . LPAREN operator RPAREN
    (37) unit_value -> . LPAREN RPAREN
    (84) letexpr -> . KEYWORD_LET SPACE equations KEYWORD_IN SPACE st_expr
    (85) where_expr -> . expr KEYWORD_WHERE SPACE equations
    (86) where_expr -> . expr KEYWORD_WHERE PADDING equations
    (75) lambda_expr -> . BACKSLASH parameters ARROW expr
    (66) number -> . BASE10_INTEGER
    (67) number -> . BASE16_INTEGER
    (68) number -> . BASE8_INTEGER
    (69) number -> . BASE2_INTEGER
    (70) number -> . FLOAT
    (71) concrete_number -> . number ANNOTATION string
    (72) concrete_number -> . number ANNOTATION char
    (73) concrete_number -> . number ANNOTATION identifier
    (39) string -> . STRING
    (38) char -> . CHAR
    (33) date -> . DATE
    (34) datetime -> . DATETIME
    (35) date_interval -> . DATE_INTERVAL
    (36) datetime_interval -> . DATETIME_INTERVAL
    (41) _identifier -> . UNDER_IDENTIFIER
    (42) _identifier -> . UPPER_IDENTIFIER
    (43) _identifier -> . LOWER_IDENTIFIER

    ATTR_ACCESS     shift and go to state 41
    LPAREN          shift and go to state 58
    KEYWORD_LET     shift and go to state 59
    BACKSLASH       shift and go to state 60
    BASE10_INTEGER  shift and go to state 61
    BASE16_INTEGER  shift and go to state 62
    BASE8_INTEGER   shift and go to state 63
    BASE2_INTEGER   shift and go to state 64
    FLOAT           shift and go to state 65
    STRING          shift and go to state 66
    CHAR            shift and go to state 67
    DATE            shift and go to state 68
    DATETIME        shift and go to state 69
    DATE_INTERVAL   shift and go to state 70
    DATETIME_INTERVAL shift and go to state 71
    UNDER_IDENTIFIER shift and go to state 10
    UPPER_IDENTIFIER shift and go to state 11
    LOWER_IDENTIFIER shift and go to state 12

    expr                           shift and go to state 33
    expr_term0                     shift and go to state 34
    expr_term1                     shift and go to state 35
    expr_term2                     shift and go to state 36
    expr_term6                     shift and go to state 37
    expr_term7                     shift and go to state 38
    expr_term9                     shift and go to state 39
    expr_factor                    shift and go to state 40
    literal                        shift and go to state 42
    identifier                     shift and go to state 43
    enclosed_expr                  shift and go to state 44
    unit_value                     shift and go to state 45
    letexpr                        shift and go to state 46
    where_expr                     shift and go to state 47
    lambda_expr                    shift and go to state 48
    number                         shift and go to state 49
    concrete_number                shift and go to state 50
    string                         shift and go to state 51
    char                           shift and go to state 52
    date                           shift and go to state 53
    datetime                       shift and go to state 54
    date_interval                  shift and go to state 55
    datetime_interval              shift and go to state 56
    _identifier                    shift and go to state 57

state 25

    (115) _datatype_lhs -> KEYWORD_DATA SPACE . UPPER_IDENTIFIER _cons_params

    UPPER_IDENTIFIER shift and go to state 72


state 26

    (107) _definition_set -> NEWLINE definition . _definition_set
    (107) _definition_set -> . NEWLINE definition _definition_set
    (108) _definition_set -> . empty
    (74) empty -> .

    NEWLINE         shift and go to state 17
    $end            reduce using rule 74 (empty -> .)

    _definition_set                shift and go to state 73
    empty                          shift and go to state 18

state 27

    (113) nametype_decl -> _identifier COLON COLON . st_type_expr
    (24) st_type_expr -> . type_expr
    (87) type_expr -> . type_function_expr
    (88) type_expr -> . type_term
    (89) type_function_expr -> . type_term ARROW _maybe_padding type_function_expr
    (90) type_function_expr -> . type_term
    (91) type_term -> . type_app_expression
    (92) type_term -> . type_factor
    (93) type_app_expression -> . type_factor _app_args_non_empty
    (99) type_factor -> . type_variable
    (100) type_factor -> . type_cons
    (101) type_factor -> . LPAREN _maybe_padding type_expr _maybe_padding RPAREN
    (102) type_factor -> . LBRACKET _maybe_padding type_expr _maybe_padding RBRACKET
    (97) type_variable -> . LOWER_IDENTIFIER
    (98) type_cons -> . UPPER_IDENTIFIER

    LPAREN          shift and go to state 82
    LBRACKET        shift and go to state 83
    LOWER_IDENTIFIER shift and go to state 84
    UPPER_IDENTIFIER shift and go to state 85

    st_type_expr                   shift and go to state 74
    type_expr                      shift and go to state 75
    type_function_expr             shift and go to state 76
    type_term                      shift and go to state 77
    type_app_expression            shift and go to state 78
    type_factor                    shift and go to state 79
    type_variable                  shift and go to state 80
    type_cons                      shift and go to state 81

state 28

    (77) _parameters -> SPACE _identifier . _parameters
    (77) _parameters -> . SPACE _identifier _parameters
    (78) _parameters -> . empty
    (74) empty -> .

    SPACE           shift and go to state 21
    EQ              reduce using rule 74 (empty -> .)
    ARROW           reduce using rule 74 (empty -> .)

    _parameters                    shift and go to state 86
    empty                          shift and go to state 22

state 29

    (114) datatype_definition -> _datatype_lhs EQ _data_rhs .

    NEWLINE         reduce using rule 114 (datatype_definition -> _datatype_lhs EQ _data_rhs .)
    $end            reduce using rule 114 (datatype_definition -> _datatype_lhs EQ _data_rhs .)


state 30

    (118) _data_rhs -> data_cons . _data_conses
    (119) _data_conses -> . _maybe_padding PIPE data_cons _data_conses
    (120) _data_conses -> . empty
    (103) _maybe_padding -> . PADDING
    (104) _maybe_padding -> . empty
    (74) empty -> .

    PADDING         shift and go to state 90
    NEWLINE         reduce using rule 74 (empty -> .)
    $end            reduce using rule 74 (empty -> .)
    PIPE            reduce using rule 74 (empty -> .)

    _data_conses                   shift and go to state 87
    _maybe_padding                 shift and go to state 88
    empty                          shift and go to state 89

state 31

    (121) data_cons -> _data_cons .

    PADDING         reduce using rule 121 (data_cons -> _data_cons .)
    PIPE            reduce using rule 121 (data_cons -> _data_cons .)
    NEWLINE         reduce using rule 121 (data_cons -> _data_cons .)
    $end            reduce using rule 121 (data_cons -> _data_cons .)


state 32

    (122) _data_cons -> UPPER_IDENTIFIER . _cons_args
    (123) _cons_args -> . SPACE cons_arg _cons_args
    (124) _cons_args -> . empty
    (74) empty -> .

    SPACE           shift and go to state 92
    PADDING         reduce using rule 74 (empty -> .)
    PIPE            reduce using rule 74 (empty -> .)
    NEWLINE         reduce using rule 74 (empty -> .)
    $end            reduce using rule 74 (empty -> .)

    _cons_args                     shift and go to state 91
    empty                          shift and go to state 93

state 33

    (80) equation -> pattern EQ expr .
    (13) expr_term0 -> expr . infixl_operator_0 expr_term0
    (85) where_expr -> expr . KEYWORD_WHERE SPACE equations
    (86) where_expr -> expr . KEYWORD_WHERE PADDING equations
    (60) infixl_operator_0 -> . TICK_OPERATOR

  ! shift/reduce conflict for KEYWORD_WHERE resolved as shift
  ! shift/reduce conflict for TICK_OPERATOR resolved as shift
    NEWLINE         reduce using rule 80 (equation -> pattern EQ expr .)
    $end            reduce using rule 80 (equation -> pattern EQ expr .)
    PADDING         reduce using rule 80 (equation -> pattern EQ expr .)
    KEYWORD_IN      reduce using rule 80 (equation -> pattern EQ expr .)
    SPACE           reduce using rule 80 (equation -> pattern EQ expr .)
    DOT_OPERATOR    reduce using rule 80 (equation -> pattern EQ expr .)
    LPAREN          reduce using rule 80 (equation -> pattern EQ expr .)
    STAR            reduce using rule 80 (equation -> pattern EQ expr .)
    SLASH           reduce using rule 80 (equation -> pattern EQ expr .)
    DOUBLESLASH     reduce using rule 80 (equation -> pattern EQ expr .)
    PERCENT         reduce using rule 80 (equation -> pattern EQ expr .)
    PLUS            reduce using rule 80 (equation -> pattern EQ expr .)
    MINUS           reduce using rule 80 (equation -> pattern EQ expr .)
    COLON           reduce using rule 80 (equation -> pattern EQ expr .)
    OPERATOR        reduce using rule 80 (equation -> pattern EQ expr .)
    ARROW           reduce using rule 80 (equation -> pattern EQ expr .)
    COMMA           reduce using rule 80 (equation -> pattern EQ expr .)
    RPAREN          reduce using rule 80 (equation -> pattern EQ expr .)
    KEYWORD_WHERE   shift and go to state 95
    TICK_OPERATOR   shift and go to state 96
